--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <body>
         
-<a onclick="window.location.href='itms-services:///?action=download-manifest&url=https://liuxu1224.github.io/css/a.plist'">下载IPA</a>
+<a onclick="window.location.href="itms-services:///?action=download-manifest&url=https://liuxu1224.github.io/css/a.plist">下载IPA</a>
 
 
   </body>
