--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <body>
         
-<a onclick="window.location.href='itms-services:///?action=download-manifest&url=">下载IPA</a>
+<a itms-services:///?action=download-manifest&url=https://github.com/liuxu1224/liuxu1224.github.io/blob/master/css/a.plist</a>
 
 <a href='itms-services:///?action=download-manifest&url=https://github.com/liuxu1224/liuxu1224.github.io/blob/master/css/a.plist' target=_blank clickid=guanwang_navigation_productcenter>下载</a>					
 
