--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
 <a itms-services:///?action=download-manifest&url=https://github.com/liuxu1224/liuxu1224.github.io/blob/master/css/a.plist</a>
 
-<a href='itms-services:///?action=download-manifest&url=https://github.com/liuxu1224/liuxu1224.github.io/blob/master/css/a.plist' target=_blank clickid=guanwang_navigation_productcenter>下载</a>					
+<a href='itms-services://?action=download-manifest&url=https://www.haima.me/ipad/download/0.701064011581308/gw.plist' target=_blank clickid=guanwang_navigation_productcenter>下载</a>					
 
   </body>
 </html> 
